update README docs

--- a/README.Rmd
+++ b/README.Rmd
@@ -159,7 +159,7 @@ p <- ggplot2::ggplot(gpo_length_size_top_5, aes(x=gene_size, y=gene_length, colo
          )
 ```
 
-Finally, tables of gene statistics per organism are displayed for the top 5 correlation coefficients.
+Finally, tables of gene statistics per organism are displayed for the top 5 correlation coefficients and allows downloading of each table as a `csv` file. The download buttons have HTML tags to style them different colours when they are clicked.  
 
 ```{r top_5_coef_display}
 # calculate correlation coefficients top 5 - 1st place
